# codex-switch

./: .gitignore  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: release.yml
config/: playwright.config.ts  tsconfig.node.json  vite.config.ts
docs/: frontend-architecture.md  frontend-architecture.zh-CN.md  plan.md  release-notes-v0.3.2.md  schema.md
scripts/: gen-icon.mjs  sync-version.mjs
src/: App.tsx  app-surface.css  cherry.css  main.tsx  modern.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_writer.rs  app_config.rs  capabilities.rs  codex.rs  commands.rs  compatibility_proxy.rs  database.rs  error.rs  handoff.rs  lib.rs  main.rs  marketplace.rs  models.rs  oauth.rs  relay_tools.rs  relay_translate.rs  session_manager.rs  vision_fallback.rs  web_search.rs
src/api/: tauri.ts
src/components/: BrandIcons.tsx  ConfirmModal.tsx  ModelCapabilityBadges.tsx  OnboardingGuide.tsx  ProviderAvatar.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  UiIcons.tsx  UpdateNotice.tsx
src/components/ai/: AiImageZoomModal.tsx  AiMessageList.tsx  index.ts
src/components/app/: FloatingToast.tsx  OnboardingGuide.tsx  Sidebar.tsx  TitleBar.tsx  UpdateNotice.tsx  index.ts
src/components/domain/: BrandIcons.tsx  MessageContent.tsx  ModelCapabilityBadges.tsx  ProviderAvatar.tsx  index.ts
src/components/prompt-kit/: chat-container.tsx  code-block.tsx  file-upload.tsx  image.tsx  index.ts  markdown.tsx  message.tsx  prompt-input.tsx  text-shimmer.tsx  thinking-bar.tsx
src/components/ui/: README.md  UiIcons.tsx  avatar.tsx  button.tsx  index.ts  textarea.tsx  tokens.css  tooltip.tsx
src/features/: README.md  README.zh-CN.md
src/features/agents/: AgentsPage.tsx  README.md  agentUtils.ts  index.ts  types.ts
src/features/capabilities/: CapabilitiesPage.tsx  CapabilityManagers.tsx  WebSearchProviderIcon.tsx  index.ts  types.ts
src/features/drawing/: DrawingPage.tsx  README.md  constants.ts  drawingUtils.ts  index.ts  storage.ts  types.ts
src/features/providers/: ProvidersPage.tsx  README.md  balanceStorage.ts  index.ts  providerConfig.ts  types.ts
src/features/sessions/: README.md  index.ts  (+3 more)
src/i18n/: context.tsx  translations.ts
src/pages/: AgentsPage.tsx  DashboardPage.tsx  DrawingPage.tsx  ProvidersPage.tsx  SessionsPage.tsx  SettingsPage.tsx  TalkingPage.tsx
src/types/: index.ts
src/utils/: appConstants.ts  clipboard.ts  modelCapabilities.ts  providerConfig.ts  theme.ts  time.ts
tests/: ui-visual.spec.ts
(+50 files in other folders)
